# rms

./: README.md
control/: CmakeLists.txt  package.xml
control/src/: control.cpp
rmsarm/Assets/: armcontrol.cs  jointarmcontrol.cs  roswithcontrol.cs  table.fbx  wardrobe_auto.fbx
rmsarm/Assets/Resources/: Letter-Muhsin.fbx  LetterYasser.fbx  ROSConnectionPrefab.prefab
rmsarm/Assets/Resources/Materials/: muhsin.mat  yassir.mat
rmsarm/Assets/Scenes/: SampleScene.unity  main.unity
rmsarm/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
rmsarm/Assets/wardrobe texture/Materials/: Wardrobe_bake.mat
rmsarm/ProjectSettings/: ProjectSettings.asset
